# cmake_googletest_sample_001

./: CMakeLists.txt  ReadMe.txt
gtest/: ReadMe.txt
test_code/: test_main.cpp
